--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
         <!-- Custom style -->
         <link rel="stylesheet" href="css/style.css">
     
-        <title>Password Generator </title>
+        <title>Biglietto del treno </title>
     </head>
 <body>
     <main class="container">
         <div class="row">
             <div class="col-12 text-center py-5">                   
-                    <h1 class="text-uppercase text-white bg-dark" id="password">La tua nuova password è</h3> 
+                    <h1 class="text-uppercase text-white bg-dark" id="outcome">price</h1> 
             </div>
         </div>
     </main>
