--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
         <!-- Google font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
-
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet"> 
     
         <!-- Font-Awesome cdn -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -28,7 +27,7 @@
     <main class="container">
         <div class="row">
             <div class="col-12 text-center py-5">                   
-                    <h1 class="text-uppercase text-white bg-dark" id="outcome">price</h1> 
+                    <h1 class="text-uppercase bg-primary text-white" id="outcome">price</h1> 
             </div>
         </div>
     </main>
